--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 html {
   scroll-behavior: smooth;
+  color: #292929;
 }
 
 body {
   margin: 0;
   font-family: "Inter", sans-serif;
+  font-size: 16px;
+  line-height: 22.4px;
 }
 
 .header {
@@ -25,17 +28,32 @@ body {
   justify-content: space-between;
 }
 
+.header__title {
+  font-weight: bold;
+  text-align: center;
+  letter-spacing: -1.5px;
+}
+
 section {
   height: 500px;
 }
 
 .menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  transform: translateX(-100%);
+  transition: transform 500ms;
+  box-sizing: border-box;
   box-sizing: border-box;
   padding: 64px 120px;
   background: #e5e5e5;
+  height: 100vh;
+}
+
+.menu:target {
+  transform: translateX(0%);
 }
 
 .menu__top {
@@ -58,4 +76,67 @@ section {
   line-height: 22px;
   letter-spacing: 2px;
   text-transform: uppercase;
+}
+
+.recommended {
+  margin-bottom: 120px;
+}
+
+.recommended__title {
+  margin-top: 0;
+  margin-bottom: 64px;
+  font-size: 48px;
+  line-height: 100%;
+  font-weight: bold;
+  text-align: center;
+  letter-spacing: -1.5px;
+}
+
+.recommended__products {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.product__photo {
+  width: 100%;
+  margin-bottom: 32px;
+}
+
+.product__title {
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+
+.product__category {
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+
+.product__price {
+  margin: 0;
+  font-weight: bold;
+}
+
+.main {
+  padding: 120px;
+}
+
+.categories__title {
+  margin-top: 0;
+  margin-bottom: 64px;
+  font-size: 48px;
+  line-height: 100%;
+  font-weight: bold;
+  text-align: center;
+  letter-spacing: -1.5px;
+}
+
+.how-to-buy__title {
+  margin-top: 0;
+  margin-bottom: 64px;
+  font-size: 48px;
+  line-height: 100%;
+  font-weight: bold;
+  letter-spacing: -1.5px;
 }
