--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   font-family: "Inter", sans-serif;
   font-size: 16px;
-  line-height: 22.4px;
+  line-height: 140%;
 }
 
 .header {
@@ -98,6 +98,10 @@ section {
   gap: 24px;
 }
 
+.product {
+  flex-basis: 324px;
+}
+
 .product__photo {
   width: 100%;
   margin-bottom: 32px;
@@ -106,6 +110,8 @@ section {
 .product__title {
   margin-top: 0;
   margin-bottom: 8px;
+  font-size: 16px;
+  line-height: 140%;
 }
 
 .product__category {
@@ -120,6 +126,13 @@ section {
 
 .main {
   padding: 120px;
+  background-color: white;
+}
+
+.categories {
+  max-width: 1020px;
+  margin: 0 auto;
+  margin-bottom: 120px;
 }
 
 .categories__title {
@@ -132,11 +145,67 @@ section {
   letter-spacing: -1.5px;
 }
 
+.category {
+  margin-bottom: 64px;
+}
+
+.category__photos {
+  display: flex;
+  gap: 3%;
+  margin-bottom: 16px;
+}
+
+.category__title {
+  margin: 0;
+}
+
+.photo-wide {
+  width: 65%;
+}
+
+.photo-square {
+  width: 32%;
+}
+
+.how-to-buy {
+  max-width: 1020px;
+  margin: 0 auto;
+  display: flex;
+  gap: 24px;
+}
+
 .how-to-buy__title {
+  flex-basis: 50%;
   margin-top: 0;
   margin-bottom: 64px;
   font-size: 48px;
   line-height: 100%;
   font-weight: bold;
   letter-spacing: -1.5px;
+}
+
+.how-to-buy__content {
+  flex-basis: 50%;
+}
+
+.how-to-buy__benefits {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 40px;
+  font-weight: bold;
+}
+
+.footer {
+  position: sticky;
+  bottom: 0;
+  z-index: -1;
+  height: 460px;
+  background-image: url("./images/footer-bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
