--- a/style.css
+++ b/style.css
@@ -95,6 +95,11 @@ body {
   justify-content: center;
   gap: 24px;
 }
+@media (max-width: 640px) {
+  .recommended__products {
+    flex-direction: column;
+  }
+}
 
 .product {
   flex-basis: 324px;
@@ -125,6 +130,11 @@ body {
 .main {
   padding: 120px;
   background-color: white;
+}
+@media (max-width: 640px) {
+  .main {
+    padding: 20px;
+  }
 }
 
 .categories {
